panini_macros/tests/compile-fail/empty-grammar.rs
#![feature(plugin)]
#![plugin(panini_macros)]

fn main() {
    grammar! {};
    //~^ grammar is empty
}
